# personal-portfolio

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  start.py  test_ibkr.py
config/: config.example.yaml
src/portfolio_manager/: _clock.py  cli.py  config.py  logging_setup.py
src/portfolio_manager/db/: __init__.py  connection.py  migrations.py  schema.py
src/portfolio_manager/domain/: enums.py  exceptions.py  models.py
src/portfolio_manager/providers/: __init__.py  base.py  ecb_fx.py  ibkr_price.py  mock.py  registry.py  yfinance_price.py
src/portfolio_manager/repositories/: __init__.py  accounts.py  app_settings.py  assets.py  benchmarks.py  cash.py  liabilities.py  manual_prices.py  price_history.py  prices.py  snapshots.py  targets.py  transactions.py
src/portfolio_manager/services/: __init__.py  accrual.py  asset_lookup.py  benchmarks.py  cost_basis.py  drift.py  example_data.py  exposure.py  fx.py  holdings.py  inception.py  income.py  indices.py  markets.py  performance.py  portfolio.py  price_history_sync.py  return_split.py  returns.py  risk.py  scope.py  snapshot.py  snapshot_diff.py
src/portfolio_manager/web/: app.py  deps.py
src/portfolio_manager/web/routes/: accounts.py  api.py  assets.py  benchmarks.py  cash.py  compare.py  exports.py  exposures.py  holdings.py  imports.py  income.py  liabilities.py  manual_prices.py  (+7 more)
tests/: conftest.py  test_accounts_and_settings.py  test_lookup_and_markets.py  test_new_services.py  test_portfolio_service.py  test_providers.py  test_scope_and_exposure.py  test_snapshot_flow.py
(+24 files in other folders)
