[project]
name = "portfolio-manager"
version = "0.1.0"
description = "Personal portfolio manager with multi-currency snapshotting"
requires-python = ">=3.11"
authors = [{ name = "Jonatan" }]
dependencies = [
    "duckdb>=1.0.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]
ibkr = [
    "ib_insync>=0.9.86",
]

[project.scripts]
portfolio = "portfolio_manager.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_manager"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
